[package]
name = "lyon_test"
version = "0.1.0"
edition = "2021"

# Enable max optimizations for dependencies, but not for our code:
[profile.dev.package."*"]
opt-level = 3

# Enable only a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
bevy_prototype_lyon = "0.11.0"
bevy-inspector-egui = "0.23.2"
bevy_egui = "0.25.0"
egui = "0.26.2"

[dependencies.bevy]
version = "0.13.0"
default-features = true